@@ -1,0 +1,3 @@
+[
+<%= @patients.collect{|p| "{\"id\":\"#{p.id}\", \"label\":\"#{highlight(p.code + " - " + p.name, params[:mrn].split(' '), highlighter: '<b>\1</b>')}\", \"value\":\"#{p.code}\"}" }.join(',').html_safe %>
+]
